--- a/package.json
+++ b/package.json
@@ -35,7 +35,10 @@
     "express": "^4.14.0",
     "immutability-helper": "^2.0.0",
     "mongodb": "^2.2.16",
+    "mongoose": "^4.7.4",
     "monk": "^3.1.3",
+    "passport": "^0.3.2",
+    "passport-jwt": "^2.2.1",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-redux": "^5.0.1",
