--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "css-loader": "^0.26.1",
     "eslint-loader": "^1.6.1",
     "eslint-plugin-react": "^6.8.0",
+    "file-loader": "^0.9.0",
     "jsx-loader": "^0.13.2",
     "node-sass": "^4.0.0",
     "nodemon": "^1.11.0",
@@ -26,11 +27,13 @@
     "sass-loader": "^4.1.0",
     "sasslint-loader": "0.0.1",
     "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
     "webpack": "^1.14.0",
     "webpack-dev-server": "^1.16.2"
   },
   "dependencies": {
     "body-parser": "^1.15.2",
+    "bootstrap": "^3.3.7",
     "debug": "^2.4.4",
     "express": "^4.14.0",
     "immutability-helper": "^2.0.0",
@@ -40,6 +43,7 @@
     "passport": "^0.3.2",
     "passport-jwt": "^2.2.1",
     "react": "^15.4.1",
+    "react-bootstrap": "^0.30.7",
     "react-dom": "^15.4.1",
     "react-redux": "^5.0.1",
     "react-router": "^3.0.0",
