--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "server": "nodemon ./backend/bin/www",
     "prod": "webpack -p"
   },
-  "author": "",
+  "author": "Anton Burduzha",
   "license": "ISC",
   "devDependencies": {
     "babel-core": "^6.20.0",
